syntax = "proto3";
package model;
option go_package = "../model";

message User {
  string user_id = 1;
  string login_id = 2;
  string user_name = 3;
  string password = 4;
  string tenant_id = 5;
  string tenant_name = 6;
}